exports[`SearchBar component snapshot renders basic required data 1`] = `
<div
  className="bar_t04vgp">
  <button
    className="empty_1b6lvt9"
    type="submit">
    <i
      className="icon_48j6am fa fa-search" />
  </button>
  <input
    className="input_bvvtu9" />
</div>
`;

exports[`SearchBar component snapshot renders with additional style, value and extra attributes 1`] = `
<div
  className="bar_t04vgp-o_O-searchBar_70d19d">
  <button
    className="empty_1b6lvt9"
    type="submit">
    <i
      className="icon_48j6am fa fa-search" />
  </button>
  <input
    className="input_bvvtu9"
    placeholder="This is Search Box"
    value="name" />
</div>
`;
